--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@sindresorhus/slugify": "^2.2.1",
-    "amqplib": "^0.10.3",
+    "amqplib": "0.10.3",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
-    "@types/amqplib": "^0.10.7",
+    "@types/amqplib": "0.10.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
@@ -33,8 +34,7 @@
     "prettier": "^3.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0",
-    "@types/cors": "^2.8.17"
+    "typescript-eslint": "^8.23.0"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts"
