--- a/user-service/package.json
+++ b/user-service/package.json
@@ -2,10 +2,11 @@
   "dependencies": {
     "@sindresorhus/slugify": "^2.2.1",
     "@types/bcryptjs": "^3.0.0",
-    "amqplib": "^0.10.7",
+    "amqplib": "^0.10.3",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
@@ -19,6 +20,7 @@
     "@eslint/js": "^9.20.0",
     "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
@@ -39,6 +41,6 @@
     "typescript-eslint": "^8.23.0"
   },
   "scripts": {
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts"
   }
 }
