--- a/user-service/package.json
+++ b/user-service/package.json
@@ -41,6 +41,7 @@
     "typescript-eslint": "^8.23.0"
   },
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "start": "ts-node src/server.ts"
   }
 }
