--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -56,7 +56,26 @@ services:
         condition: service_healthy
     environment:
       - PORT=3001
-      - JWT_SECRET=super-secret-jwt-key-2024
+      - JWT_SECRET=olesya251925
+      - MONGO_URI=mongodb://mongo:27017/backend-5lab
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+    networks:
+      - app-network
+
+  course-service:
+    build:
+      context: ./course-service
+      dockerfile: Dockerfile
+    ports:
+      - "3002:3002"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
+    environment:
+      - PORT=3002
+      - JWT_SECRET=olesya251925
       - MONGO_URI=mongodb://mongo:27017/backend-5lab
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
     networks:
