--- a/course-service/package.json
+++ b/course-service/package.json
@@ -14,8 +14,7 @@
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
-    "uuid": "^11.1.0",
-    "module-alias": "^2.2.3"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -38,17 +37,11 @@
     "prettier": "^3.5.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "start": "ts-node src/server.ts"
-  },
-  "_moduleAliases": {
-    "@models": "./src/models",
-    "@tags": "../tag-service/src",
-    "@user": "../user-service/src",
-    "@lesson": "../lesson-service/src",
-    "@enrollment": "../enrollment-service/src"
   }
 }
