--- a/course-service/tsconfig.json
+++ b/course-service/tsconfig.json
@@ -3,19 +3,15 @@
     "target": "ES2020",
     "module": "CommonJS",
     "outDir": "./dist",
-    "rootDir": "../",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@models/*": ["./src/models/*"],
-      "@tags/*": ["../tag-service/src/*"],
-      "@user/*": ["../user-service/src/*"],
-      "@lesson/*": ["../lesson-service/src/*"],
-      "@enrollment/*": ["../enrollment-service/src/*"]
+      "@shared/*": ["../shared/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../shared/**/*"],
   "exclude": ["node_modules"]
 }
