--- a/course-service/dockerfile
+++ b/course-service/dockerfile
@@ -2,17 +2,13 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Копируем package.json и tsconfig.json
-COPY course-service/package*.json ./
-COPY course-service/tsconfig.json ./
+COPY package*.json ./
+COPY tsconfig.json ./
 
-# Устанавливаем зависимости
-RUN yarn install
+RUN yarn install --frozen-lockfile
 
-# Копируем исходный код
-COPY course-service/src ./src
+COPY src ./src
 
-# Проверяем наличие необходимых директорий
 RUN mkdir -p /app/user-service/src/models
 
 CMD ["yarn", "run", "start"]
