--- a/course-service/package.json
+++ b/course-service/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "course-service",
+  "version": "1.0.0",
+  "license": "MIT",
   "dependencies": {
     "@sindresorhus/slugify": "^2.2.1",
     "@types/bcryptjs": "^3.0.0",
@@ -9,7 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5",
