lesson-service implemented

--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -103,6 +103,25 @@ services:
     networks:
       - app-network
 
+  lesson-service:
+    build:
+      context: ./lesson-service
+      dockerfile: Dockerfile
+    ports:
+      - "3004:3004"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
+    environment:
+      - PORT=3004
+      - JWT_SECRET=olesya251925
+      - MONGO_URI=mongodb://mongo:27017/backend-5lab
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+    networks:
+      - app-network
+
   status-service:
     build:
       context: ./status-service
