--- a/status-service/dockerfile
+++ b/status-service/dockerfile
@@ -3,9 +3,9 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
+COPY tsconfig.json ./
+COPY src ./src
 
 RUN yarn install
-
-COPY . .
 
 CMD ["yarn", "run", "dev"]
