--- a/status-service/package.json
+++ b/status-service/package.json
@@ -1,28 +1,26 @@
 {
+  "name": "comment-service",
+  "version": "1.0.0",
+  "main": "src/server.ts",
+  "license": "MIT",
   "dependencies": {
-    "amqplib": "^0.10.7",
+    "amqplib": "^0.10.3",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.0.3",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
     "@types/amqplib": "^0.10.7",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.1",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "eslint": "^9.20.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.14.0",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.5.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19",
+    "nodemon": "^3.0.2",
+    "typescript": "^5.3.3"
   },
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "build": "tsc"
   }
 }
