--- a/status-service/tsconfig.json
+++ b/status-service/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020", 
-    "module": "CommonJS", 
+    "target": "ES2020",
+    "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src", 
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "moduleResolution": "node"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tsconfig.json"],
   "exclude": ["node_modules"]
 }
